css/style.css
/* ... */
@media only screen and (min-width: 62em) {
  .hero {
    background-color: var(--clr-primary-700);
  }
}

.card-widget {
  display: none;
  position: absolute;
  z-index: 3;
  width: 7rem;
  height: 7rem;
  border-radius: .6rem;
  background-color: var(--clr-primary-800);
  box-shadow: 0px 0px 5px rgba(0,0,0,0.21);
}

.card-widget.mail {
  top: -3rem;
  right: 3rem;
}

.card-widget.web {
  bottom: 1.5rem;
  right: -3rem;
}

.card-widget.nyc {
  bottom: -3rem;
  left: 4.5rem;
}

.widget-img {
  width: 4.5rem;
}

@media only screen and (min-width: 62em) {
  .card-widget {
    display: flex;
    justify-content: center;
    align-items: center;
  }
}

.hero-card {
  color: var(--clr-primary-800);
  text-align: center;
}

@media only screen and (min-width: 62em) {
  .hero-card {
    background-color: #fff;
    width: 48rem;
    padding: 3em;
    border-radius: .5rem;
    margin: 0 auto;
    color: var(--clr-primary-600);
    text-align: unset;
    box-shadow: 0px 0px 18px 9px rgba(0,0,0,0.09);

    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

.hero-card h2 {
  font-size: 2rem;
  font-weight: 400;
  margin-bottom: .25em;
  opacity: 90%;
}

@media only screen and (min-width: 62em) {
  .hero-card h2 {
    font-size: 2.4rem;
    opacity: unset;
  }
}

.hero-card h1 {
  margin-bottom: 1em;
  line-height: 3.3rem;
}

@media only screen and (min-width: 62em) {
  .hero-card h1 {
    font-size: 2.7rem;
    margin-bottom: .5em;
  }
}

.hero-card p {
  min-width: 21rem;
  max-width: 24rem;
  margin: 0 auto;
  opacity: 90%;
}

@media only screen and (min-width: 62em) {
  .hero-card p {
    margin: unset;
    max-width: unset;
    font-size: 1.2rem;
    opacity: unset;
  }
}

.underline {
  text-decoration: underline 2px;
}

@media only screen and (min-width: 62em) {
  .underline {
    text-decoration: underline 4px;
  }
}

.hero-buttons {
  margin-top: 2em;
  display: flex;
  text-align: center;
  gap: 1em;
  justify-content: center;
}

@media only screen and (min-width: 62em) {
  .hero-buttons {
    display: none;
  }
}

.btn {
  color: var(--clr-primary-800);
  padding: 1em 0;
  width: 9rem;
  border: 2px solid var(--clr-primary-800);
  border-radius: .5rem;
}

.btn:hover,
.btn:focus {
  opacity: 70%;
}

.hero-socials {
  margin-top: 3.6em;
  display: flex;
  justify-content: center;
  gap: 1.5em;
}

@media only screen and (min-width: 62em) {
  .hero-socials {
    margin-top: unset;
  }
}

.social-icon {
  color: var(--clr-primary-800);
}

@media only screen and (min-width: 62em) {
  .social-icon {
    color: var(--clr-primary-600);
    margin-top: 2em;
  }
}

.social-icon:hover,
.social-icon:focus {
  opacity: 70%;
}

@media only screen and (min-width: 62em) {
  .social-icon:hover,
  .social-icon:focus {
    color: var(--clr-primary-700);
    opacity: unset;
  }
}

.social-icon i {
  font-size: 2.1rem;
}

.skills {
  padding: 4.5em 0 5.5em;
  background-color: #fcfcfc;
  box-shadow: 0px 0px .6px rgba(0,0,0,0.15);
}

.skills h3 {
  text-align: center;
  font-size: 3rem;
  font-weight: 800;
  z-index: 2;
  position: relative;
}

.skills h3:after {
  content: '';
  display: block;
  width: 8rem;
  background-color: var(--clr-primary-500);
  height: 1.7rem;
  margin: 0 auto;
  top: -39px;
  left: 6px;
  position: relative;
  z-index: -1;
}

.skill-icons {
  display: grid;
  grid-template-columns: repeat(2, auto);
  gap: 3em;
  margin-top: 3em;
}

@media only screen and (min-width: 48em) {
  .skill-icons {
    grid-template-columns: repeat(3, auto);
  }
}

@media only screen and (min-width: 62em) {
  .skill-icons {
    grid-template-columns: repeat(6, 1fr);
  }
}

.skill-icons div {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.icon {
  width: 4rem;
  margin-bottom: 1em;
}

.projects {
  padding: 3em 0 6em;
  background-color: #fff;
}

.projects .container {
  max-width: 75rem;
}

.projects h3 {
  text-align: center;
  font-size: 3rem;
  font-weight: 800;
  margin-bottom: .5em;
  position: relative;
  z-index: 1;
}

.projects h3:after {
  content: '';
  display: block;
  width: 12.25rem;
  background-color: var(--clr-primary-500);
  height: 1.7rem;
  margin: 0 auto;
  top: -39px;
  left: 6px;
  position: relative;
  z-index: -1;
}

.project-title {
  font-size: 2.4rem;
  text-align: center;
  margin: 1.8em 0;
  text-decoration: underline .3rem var(--clr-primary-500);
}

.email > .project-title {
  margin-top: unset;
}

.project-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2em;
}

.project-email,
.project-web {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  overflow: hidden;
}

.project-email {
  width: 10rem;
  height: 21rem;
  transition: all .3s ease-in-out;
  border-radius: .3rem;
  box-shadow: 0px 0px 6px 1.5px rgba(0,0,0,0.07);
  background-size: 25rem;
  background-position: top;
  background-repeat: no-repeat;
}

.project-web {
  width: 20rem;
  height: 12rem;
  background-size: cover;
  transition: all .3s ease-in-out;
  border-radius: .3rem;
  box-shadow: 0px 0px 6px 1.5px rgba(0,0,0,0.07);
}
.project-web:hover,
.project-email:hover,
.project-web:hover .project-view,
.project-email:hover .project-view {
  opacity: 100%;
  transform: scale(102%);
}

.project-view {
  color: #fff;
  font-size: 1.2rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: center;
  background-color: #000;
  padding: .5em 0;
  width: 100%;
  opacity: 0;
}

.button {
  text-align: center;
  margin-top: 3em;
}

.see-all {
  display: inline-block;
  color: #fff;
  text-transform: uppercase;
  font-size: 1rem;
  font-weight: 600;
  letter-spacing: .12rem;
  border-radius: .5rem;
  background-color: var(--clr-primary-900);
  box-shadow: 0px 6px 10px 0px rgba(227,83,53,0.30);
  padding: .9em 1.8em;
}

.see-all:hover,
.see-all:focus {
  opacity: 90%;
}

.more-projects .project-grid {
  margin: 3em 0 0;
}
/* ... */

